--- a/style/licap_style.css
+++ b/style/licap_style.css
@@ -61,10 +61,12 @@ h4 {
 	align-items: center;
 	justify-content: center;
 }
-#arrow {
+#display {
 	width: 80%;
 	display: flex;
 	justify-content: space-between;
+}
+#display img{
 	opacity: .3;
 }
 /*product*/
