--- a/style/licap_style.css
+++ b/style/licap_style.css
@@ -68,6 +68,19 @@ h4 {
 #header-nav li:hover {
 	color: #fff;
 }
+#header-nav li::after{
+	position: relative;
+	left: 15.5px;
+	width: 1px;
+	height: 12px;
+    background: #d6d6d6;
+    content: "";
+    display: inline-block;
+}
+
+#header-nav li:last-child::after{
+	width: 0px;
+}
 
 #first {
 	background-color: #242424;
