make whole li linked

--- a/style/faq_style.css
+++ b/style/faq_style.css
@@ -61,7 +61,7 @@ header {
     content: "";
     display: inline-block;
 }
-#header-nav li:last-child::after{
+#header-nav a:last-child li::after{
 	width: 0px;
 }
 #header-nav li:hover {
