--- a/style/licap_style.css
+++ b/style/licap_style.css
@@ -58,6 +58,7 @@ h4 {
 }
 #top-logo {
 	padding-left: 23px;
+	transform: translateY(2px);
 }
 #header-nav li {
 	padding: 0px 15.5px;
@@ -78,7 +79,7 @@ h4 {
     display: inline-block;
 }
 
-#header-nav li:last-child::after{
+#header-nav a:last-child li::after{
 	width: 0px;
 }
 
