--- a/style/index_style.css
+++ b/style/index_style.css
@@ -36,7 +36,7 @@ section {
 	min-height: 700px;
 }
 footer {
-	height: 250px;
+	height: 200px;
 	background-color: #050E16; 
 	padding-top: 48px;
 	position: relative;
@@ -84,6 +84,9 @@ h3 {
 
 #header-nav li:hover {
 	color: #fff;
+}
+.on-this-page {
+	border-bottom: 1px solid #d6d6d6;
 }
 #first {
 	background-image: url("../image/first-background.jpg");
@@ -348,9 +351,8 @@ h3 {
 	display: flex;
 	align-items: flex-start;
 	justify-content: space-around;
-	width: 65%;
-    max-width: 750px;
-    min-width: 600px;
+    max-width: 1000px;
+	margin: 0 auto;
 }
 .footer-title {
 	font-size: 20px;
@@ -362,29 +364,53 @@ h3 {
 .footer-series p {
 	font-size: 17px;
 	color: #fff;
-    margin: 0 0 10px 0;
+    margin: 0 0 5px 0;
     cursor: pointer;
+}
+.footer-btn {
+	display: flex;
+}
+.footer-btn li {
+	padding: 0 15.5px;
+	color: #fff;
+	list-style: none;
+	cursor: pointer;
+}
+.footer-btn li::after {
+    position: relative;
+    left: 15.5px;
+    width: 1px;
+    height: 12px;
+    background: #d6d6d6;
+    content: "";
+    display: inline-block;
+}
+.footer-btn li:last-child::after {
+	display: none;
 }
 #footer-link {
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
-	margin-bottom: 23px;
+	margin-top: 17px;
+	width: 50%;
 }
 #footer-link img {
-	height: 25px;
+	height: 20px;
 	display: block;
 	cursor: pointer;
 }
 .copyight {
 	color: #fff;
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    font-size: 14px;
+	font-size: 14px;
+	width: 90%;
+	margin: 50px auto 0;
+	border-top: 1px #fff solid;
+	text-align: center;
+	padding-top: 15px;
 }
 .email-at {
-	width: 18px;
+	width: 15px;
 	padding: 0px 1px;
 	transform: translateY(3px);
 }
@@ -407,13 +433,31 @@ h3 {
 		top: 46%;
     	right: 20%;
 	}
+
+	.footer-btn {
+		display: unset
+	}
+	#footer-link {
+		width: unset;
+	}
+	.footer-btn li {
+		margin-bottom: 5px;
+	}
+	.footer-btn li::after{
+		display: none;
+	}
+	.copyight {
+		margin: 25px auto 0;
+	}
 }
 @media (max-width: 670px) {
 	body{ 
 		overflow-x: hidden;
 	}
 	footer {
-		height: 200px;
+		padding-top: 20px;
+		padding-bottom: 30px; 
+		height: unset;
 	}
 	#header {
 		background: black;
@@ -607,12 +651,22 @@ h3 {
 		margin: 0 0 5px 0;
 		text-align: center;
 	}
-	.copyight {
-		position: unset;
-		width: 90%;
-		margin: 15px auto;
-		border-top: 1px #fff solid;
+	.contact-block p{
+		font-size: 13px;
+	}
+	.footer-btn {
+		display: unset;
 		text-align: center;
-		padding-top: 15px;
+		margin-bottom: 10px;
+	}
+	.footer-btn li {
+		margin-bottom: 15px;
+	}
+	.footer-btn li::after {
+		display: none;
+	}
+	.copyight {
+		margin: 20px auto 0;
+		font-size: 12px;
 	}
 }
