--- a/style/faq_style.css
+++ b/style/faq_style.css
@@ -23,7 +23,7 @@ a:visited {
 }
 header {
 	width: 100vw;
-	height: 60px;
+	height: 80px;
 	display: flex;
 	align-items: center;
 	position: fixed;
@@ -38,13 +38,13 @@ header {
 	display: flex;
 	justify-content: flex-end;
 	padding-right: 23px;
+	margin-right: 38px;
 	min-width: 300px;
 	max-width: 550px;
 }
 #top-logo {
-    height: 50px;
-    padding-left: 23px;
-    opacity: 0.6;
+	padding-left: 23px;
+	transform: translateY(2px);
 }
 #header-nav li {
 	padding: 0px 15.5px;
@@ -76,7 +76,7 @@ header {
     text-align: center;
 }
 main {
-    width:70vw;
+    width:85vw;
     height: calc(100vh - 260px);
     margin: auto;
     display: grid;
