--- a/style/licap_style.css
+++ b/style/licap_style.css
@@ -302,6 +302,7 @@ h4 {
 	padding: 0px 1px;
 	transform: translateY(3px);
 }
+/*common style*/
 @media (max-width: 950px) {
 	.footer-btn {
 		display: unset
@@ -317,5 +318,140 @@ h4 {
 	}
 	.copyight {
 		margin: 25px auto 0;
+	}
+}
+@media (max-width: 670px) {
+	body{ 
+		overflow-x: hidden;
+	}
+	footer {
+		padding-top: 20px;
+		padding-bottom: 30px; 
+		height: unset;
+	}
+	#header {
+		background: black;
+		height: 60px;
+	}
+	#mini-menu {
+		display: inherit;
+		width: 23px;
+		padding-right: 20px;
+	}
+	#header-nav {
+		display: block;
+		position: absolute;
+		width: 100vw;
+		transition: height ease 500ms;
+		top: 60px;
+		height: 0px;
+		overflow: hidden;
+		margin-top: -1px;
+	}
+	#header-nav li{
+		height: 50px;
+		line-height: 50px;
+		background: #262626;
+		margin: -1px 0px;
+	}
+	#header-nav li::after{
+		width: 0px;
+	}
+	#header-nav li:last-child{
+		box-shadow: 0px 3px 3px rgba(0,0,0,0.5);
+	}
+	#menu-toggle:checked+#header-nav {
+		height: 200px;
+	}
+	#top-logo {
+		width: 130px;
+		padding-left: 12px;
+	}
+	h3 {
+		-webkit-text-stroke: unset;
+		color: #fff;
+	}
+
+	/*footer*/
+	#footer-nav {
+		display: none;
+	}
+	#footer-link {
+		width: 60%;
+    	margin: 0 auto 25px;
+	}
+	#phone-footer-nav {
+		display: flex;
+		flex-direction: column;
+	}
+	#phone-footer-nav p {
+		color: #fff;
+		margin: 0 0 5px 0;
+		text-align: center;
+	}
+	.contact-block p{
+		font-size: 13px;
+	}
+	.footer-btn {
+		display: unset;
+		text-align: center;
+		margin-bottom: 10px;
+	}
+	.footer-btn li {
+		margin-bottom: 15px;
+	}
+	.footer-btn li::after {
+		display: none;
+	}
+	.copyight {
+		margin: 20px auto 0;
+		font-size: 12px;
+	}
+}
+
+/*specific style for licap*/
+@media (max-width: 670px) {
+	#slogan {
+		position: relative;
+		top: 60px;
+		height: 150px;
+	}
+	.show-block {
+		font-size: 6px;
+	}
+	#midi {
+		font-size: 25px;
+	}
+	#display {
+		flex-direction: column;
+		width: 100%;
+	}
+	#licap-model {
+		text-align: center;
+	}
+	#display img {
+		width: 70px;
+		margin: auto;
+		transform: rotate(70deg)
+	}
+	#product {
+		margin-top: 20px;
+	}
+	#product h4 {
+		margin: 0 auto 20px;
+	}
+	#info {
+		flex-direction: column-reverse;
+	}
+	#info-content {
+		width: 85%;
+		margin: 0px auto 21px;
+	}
+	#spec h4 {
+		width: fit-content;
+		margin: auto;
+	}
+	.every-spec {
+		margin-top: 30px;
 	}
 }
