--- a/style/licap_style.css
+++ b/style/licap_style.css
@@ -413,7 +413,7 @@ h4 {
 @media (max-width: 670px) {
 	#slogan {
 		position: relative;
-		top: 60px;
+		margin-top: 60px;
 		height: 150px;
 	}
 	.show-block {
@@ -421,6 +421,10 @@ h4 {
 	}
 	#midi {
 		font-size: 25px;
+	}
+	#first {
+		height: fit-content;
+		min-height: unset;
 	}
 	#display {
 		flex-direction: column;
@@ -432,7 +436,12 @@ h4 {
 	#display img {
 		width: 70px;
 		margin: auto;
-		transform: rotate(70deg)
+	}
+	#rotate-right{
+		transform: translateY(60px) rotate(70deg);
+	}
+	#rotate-left{
+		transform: translateY(-60px) rotate(70deg);
 	}
 	#product {
 		margin-top: 20px;
@@ -443,9 +452,16 @@ h4 {
 	#info {
 		flex-direction: column-reverse;
 	}
+	#info img {
+		width: 80%;
+	}
 	#info-content {
 		width: 85%;
 		margin: 0px auto 21px;
+	}
+	#spec {
+		font-size: 15px;
+		min-width: inherit;
 	}
 	#spec h4 {
 		width: fit-content;
