--- a/style/about_style.css
+++ b/style/about_style.css
@@ -111,8 +111,29 @@ h4 {
     letter-spacing: 5px;
     line-height: 90px;
 }
+.show-block {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	z-index: 2;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.black-block {
+	background: #000;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	opacity: .4;
+	z-index: 1;
+}
 #first {
-    position: relative;
+	position: relative;
+	background: black;
+	padding-top: 70px;
 }
 #first h4 {
     width: 40%;
@@ -120,7 +141,8 @@ h4 {
 	max-width: 1366px;
 	display: flex;
 	align-items: center;
-	margin:70px 0 90px;
+	margin:0 0 90px;
+	color: white;
 }
 #first h4::before {
 	content: "";
@@ -135,7 +157,8 @@ h4 {
     max-width: 1000px;
     margin: 0 auto;
     font-size: 1.3em;
-    line-height: 35px;
+	line-height: 35px;
+	color: white;
 }
 #licap-line {
     height: 450px;
@@ -153,13 +176,14 @@ h4 {
     z-index: 1;
 }
 #first .green-circle.one {
-    top: -20px;
+    top: 30px;
     left: 500px;
 }
 #first .green-circle.two {
     bottom: 250px;
 }
 #second {
+	background-color: black;
     background-image: url("../image/guitar-line.png");
     position: relative;
     background-size: 650px;
@@ -172,7 +196,8 @@ h4 {
 	display: flex;
     align-items: center;
     margin:0 0 70px;
-    justify-content: flex-end;
+	justify-content: flex-end;
+	color: white;
 }
 #second h4::after {
     position: absolute;
@@ -193,7 +218,8 @@ h4 {
     font-size: 1.3em;
     position: absolute;
     right: 70px;
-    line-height: 35px;
+	line-height: 35px;
+	color: white;
 }
 #second .green-circle{
     bottom: 170px;
@@ -430,12 +456,13 @@ h4 {
     }
     #second {
         background-position: 0px 0%;
-        height: auto;
+		height: auto;
+		padding-top: 20px;
     }
     #white-block {
         width: 100%;
         height: 100%;
-        background: rgba(255,255,255,0.8);
+        background: rgba(0,0,0,0.6);
         position: absolute;
         top: 0;
         z-index: 0;
@@ -448,7 +475,7 @@ h4 {
     }
     #second h4 {
         width: 100%;
-        margin: 20px auto 20px;
+        margin: 0 auto 20px;
         justify-content: unset;
         min-width: unset;
     }
