--- a/style/licap_style.css
+++ b/style/licap_style.css
@@ -86,7 +86,7 @@ h4 {
 	text-decoration: underline
 }
 #first {
-	background-color: #242424;
+	background-color: #666;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -188,11 +188,12 @@ h4 {
 	margin-top: 11px;
 }	
 .title {
-	font-size: 1em;
+	font-size: 1.2em;
 	font-weight: 300;
 }
 .spec-content {
-	font-size: 1.2em;
+	padding-left: 10px;
+	font-size: 1em;
 	font-weight: 500;
 }
 
