--- a/style/about_style.css
+++ b/style/about_style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Righteous|Roboto&display=swap');
 
 body {
 	box-sizing: border-box;
@@ -111,6 +111,9 @@ h4 {
     letter-spacing: 5px;
     line-height: 90px;
 }
+#slogan p:last-child {
+	display: none;
+}
 .show-block {
 	width: 100%;
 	height: 100%;
@@ -156,9 +159,10 @@ h4 {
     width: 90%;
     max-width: 1000px;
     margin: 0 auto;
-    font-size: 1.3em;
+    font-size: 18px;
 	line-height: 35px;
 	color: white;
+	font-family: 'Roboto', sans-serif;
 }
 #licap-line {
     height: 450px;
@@ -215,11 +219,12 @@ h4 {
 #second p {
     width: 55%;
     max-width: 1000px;
-    font-size: 1.3em;
+    font-size: 18px;
     position: absolute;
     right: 70px;
 	line-height: 35px;
 	color: white;
+	font-family: 'Roboto', sans-serif;
 }
 #second .green-circle{
     bottom: 170px;
@@ -435,9 +440,16 @@ h4 {
     }
     
     #slogan p {
-        font-size: 25px;
+		text-align: center;
+        font-size: 24px;
         line-height: 30px;
-    }
+	}
+	#slogan p:first-child {
+		display: none;
+	}
+	#slogan p:last-child {
+		display: block;
+	}
     #first h4 {
         width: 100%;
         margin: 50px auto 20px;
@@ -458,6 +470,7 @@ h4 {
         background-position: 0px 0%;
 		height: auto;
 		padding-top: 20px;
+		padding-bottom: 100px;
     }
     #white-block {
         width: 100%;
