--- a/style/licap_style.css
+++ b/style/licap_style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Righteous|Roboto&display=swap');
 
 body {
 	box-sizing: border-box;
@@ -130,8 +130,9 @@ h4 {
 	width: 40%;
 	margin-left: 10%;
 	padding-top: 21px;
-    font-size: 1.3em;
-    line-height: 35px;
+    font-size: 18px;
+	line-height: 35px;
+	font-family: 'Roboto', sans-serif;
 }
 #info img {
 	width: 40%;
@@ -189,12 +190,14 @@ h4 {
 }	
 .title {
 	font-size: 1.2em;
-	font-weight: 300;
+	font-weight: bolder;
+	font-family: 'Roboto', sans-serif;
 }
 .spec-content {
 	padding-left: 10px;
 	font-size: 1em;
 	font-weight: 500;
+	font-family: 'Roboto', sans-serif;
 }
 
 #slogan {
