adjust boom image

--- a/style/licap_style.css
+++ b/style/licap_style.css
@@ -134,7 +134,7 @@ h4 {
 	margin-right: 5%;
 }
 #info {
-	background-color: #ececec;
+	background-color: #e0e0e0;
 	display: flex;
 	align-items: center;
 }
